5/7 - just need visual tweaks, code cleanup, and the favorites function